tests/NormalTests/paczka1/fuzzy1/27586273.err
Error in line 2: I21i5NMRSJ S767 99,8
Error in line 16: Bfiv S861 66,8
Error in line 6: S861 A753 50,5
Error in line 25: S861 S861 70,1
Error in line 26: I21i5NMRSJ S861 6,0
Error in line 17: XiS5FsKB A524 11,7
Error in line 35: Bfiv A524 15,9
